sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: ')' expected but 'for' found.
		for (i <- 0 to getNombreValeur() - 2) {
                ^AlgBubbleSort1:12: error: '(' expected but ';' found.
	while ( swapped == true ) 
^AlgBubbleSort1:15: error: illegal start of simple expression
	}
        ^